[tool.poetry]
name = "gif643-proto-e24"
version = "0.1.0"
description = ""
authors = ["William Pepin <wpepin00@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
fiddle = "^0.3.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
